<resources>
    <string name="app_name">Reflection</string>
    <string name="receive_result_instructions">Press button below to run code snippet and get result back</string>
    <string name="action_settings">Settings</string>
    <string name="run_main_static">Run Static Mains</string>
    <string name="corky">Reflection</string>
    <string name="violet">Get Movies</string>
    <string name="margerie">Nearest Carts</string>
    <string name="showloc">SHow Location</string>
    <string name="setup_carts_params">Set up Carts Parameters</string>
    <string name="glacierBayNP">warehouse carts size, Number of carts requested, Gather Point X, Y</string>
    <string name="strUtils">String Utils</string>
    <string name="clearTextview">clear Result</string>
    <string name="enter_long_lat">Enter Longitude, Latitude</string>
    <string name="pick_module">Pick Module</string>


</resources>
